feature: use color vars; remove bundle - use dist

--- a/src/css/shared/colors.css
+++ b/src/css/shared/colors.css
@@ -1,3 +1,7 @@
 :root {
-  --color-black: rgb(0, 0, 0);
+  --color-black: black;
+  --color-white: white;
+  --color-primary: blue;
+  --color-primary-dark: #ffa1b1;
+  --color-border: var(--color-primary);
 }
