--- a/src/css/shared/screenreader.css
+++ b/src/css/shared/screenreader.css
@@ -18,12 +18,12 @@
 }
 
 .screen-reader-text:focus {
-  background-color: #333;
+  background-color: var(--color-black);
   border-radius: 3px;
   box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
   clip: auto !important;
   clip-path: none;
-  color: #fff;
+  color: var(--color-white);
   display: block;
   font-size: 0.875rem;
   font-weight: bold;
