--- a/src/css/client/layout-content-sidebar.css
+++ b/src/css/client/layout-content-sidebar.css
@@ -8,7 +8,7 @@
   padding-bottom: 1rem;
   padding-left: 1rem;
   padding-right: 1rem;
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid var(--color-border);
 }
 
 @media(min-width: 960px) {
@@ -17,7 +17,7 @@
     z-index: 3200;
   }
   .site-header h1 a {
-    color: #333;
+    color: var(--color-black);
   }
   .site-header h1,
   .site-header ul {
@@ -39,7 +39,7 @@
     top: 2rem;
     left: 0;
     z-index: 3600;
-    background: #fff;
+    background: var(--color-white);
     box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
     display: none;
     width: unset;
@@ -54,7 +54,7 @@
     width: 100%;
     margin-left: 0;
     padding: 0.5rem 1rem;
-    border-bottom: 1px solid #ddd;
+    border-bottom: 1px solid var(--color-border);
   }
   .main-navigation ul .children .children {
     position: absolute;
