--- a/src/css/shared/button.css
+++ b/src/css/shared/button.css
@@ -9,9 +9,9 @@ input[type="button"],
 input[type="reset"],
 input[type="submit"] {
   -webkit-appearance: button;
-  background: #186FEA;
-  border-color: #186FEA;
-  color: #fff;
+  background: var(--color-primary);
+  border-color: var(--color-primary);
+  color: var(--color-white);
   transition: all .2s ease-in-out;
 }
 
@@ -20,8 +20,8 @@ button:hover,
 input[type="button"]:hover,
 input[type="reset"]:hover,
 input[type="submit"]:hover {
-  background: #114ca0;
-  border-color: #114ca0;
-  color: #fff;
+  background: var(--color-primary-dark);
+  border-color: var(--color-primary-dark);
+  color: var(--color-white);
   transition: all .2s ease-in-out;
 }
